# PRMX-new-BlockChainApp

./: .env.example  .gitignore  Cargo.toml  README.md  app-design.md  design.md  oracle-design.md  oracle_design.md  pricing-model.md
chopsticks/: asset-hub.yml  hydration.yml  polkadot.yml  prmx.yml  xcm-test.yml
docs/: ADMIN-DASHBOARD-PLAN.md  E2E-TEST-PLAN.md  RESTART-GUIDE.md  SETTLEMENT-FLOW.md  UI-DESIGN-PRINCIPLES.md  app-design.md  oracle-design.md  pricing-model.md  test-principle.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(landing)/: layout.tsx  page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/help/: page.tsx
frontend/src/app/lp/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/oracle/: page.tsx
frontend/src/app/policies/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/admin/: OcwHealthCard.tsx  OracleKeyStatus.tsx  ServiceStatusGrid.tsx
frontend/src/components/features/: AccountSelector.tsx  RainfallChart.tsx  ThemeProvider.tsx  WalletConnectionModal.tsx  WalletProvider.tsx  WeatherHistoryChart.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/sections/: FAQ.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  (+5 more)
frontend/src/hooks/: index.ts  useChainData.ts  useLocalStorage.ts  useOcwHealth.ts  useV3ChainData.ts
frontend/src/lib/: api-admin.ts  api-v3.ts  api.ts  blockchain.ts  constants.ts  utils.ts
frontend/src/stores/: themeStore.ts  walletStore.ts
frontend/src/types/: admin.ts  index.ts  v3.ts
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
offchain-oracle-service/: PRODUCTION.md  package-lock.json  package.json  tsconfig.json
offchain-oracle-service/src/: config.ts  index.ts
offchain-oracle-service/src/accuweather/: fetcher.ts
offchain-oracle-service/src/api/: routes.ts
offchain-oracle-service/src/chain/: listener.ts  reporter.ts
offchain-oracle-service/src/db/: mongo.ts
oracle-v2/: package.json
oracle-v2/src/: config.ts
oracle-v2/src/accuweather/: fetcher.ts
oracle-v2/src/api/: routes.ts  server.ts
oracle-v2/src/chain/: listener.ts
oracle-v2/src/db/: mongo.ts
oracle-v2/src/evaluator/: cumulative.ts
oracle-v2/src/scheduler/: monitor.ts
pallets/pallet-market-v3/: Cargo.toml
pallets/pallet-market-v3/src/: lib.rs
pallets/pallet-oracle-v3/: Cargo.toml
pallets/pallet-oracle-v3/src/: aggregator.rs  commitment.rs  expiry.rs  fetcher.rs  http_client.rs  lib.rs  ocw.rs
pallets/pallet-policy-v3/: Cargo.toml
pallets/pallet-policy-v3/src/: lib.rs
pallets/prmx-holdings/: Cargo.toml
pallets/prmx-holdings/src/: lib.rs
pallets/prmx-markets/: Cargo.toml
pallets/prmx-markets/src/: lib.rs
pallets/prmx-oracle/: Cargo.toml
pallets/prmx-oracle/src/: lib.rs
pallets/prmx-orderbook-lp/: Cargo.toml
pallets/prmx-orderbook-lp/src/: lib.rs
pallets/prmx-policy/: Cargo.toml
pallets/prmx-policy/src/: lib.rs
pallets/prmx-quote/: Cargo.toml
pallets/prmx-quote/src/: lib.rs
pallets/prmx-xcm-capital/: Cargo.toml
pallets/prmx-xcm-capital/src/: lib.rs  xcm_config.rs  xcm_strategy.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  xcm_config.rs
scripts/: cancel-all-v3-requests.mjs  create-test-policies.mjs  e2e-singapore-flow.mjs  e2e-v2-policy-flow.mjs  generate-v3-hmac-secret.mjs  monitor-v3-policies.mjs  package-lock.json  package.json  populate-location-registry.mjs  restart-dev-environment.sh  run-chopsticks-test.sh  run-node-dev.sh  set-oracle-api-key.mjs  set-pricing-api-key.mjs  set-v3-oracle-secrets.mjs  start-node.sh  test-dao-lp-profit.mjs  test-event-occurs.mjs  test-event-with-unfilled-orders.mjs  test-full-insurance-cycle.mjs  test-lp-cleanup.mjs  test-policy-lp.mjs  test-prmx-flow-part2.mjs  test-prmx-flow.mjs  test-secondary-lp-market.mjs  test-settlement-at-maturity.mjs  test-settlement-multiple-lps.mjs  test-v2-comprehensive.mjs  test-v2-settlement.mjs  test-v3-comprehensive.mjs  test-v3-flow.mjs  test-v3-ingest-api.mjs  test-v3-monitoring-requests.mjs
scripts/chopsticks-tests/: README.md  common.mjs  package-lock.json  package.json  setup-hrmp-channels.mjs  test-full-xcm-cycle.mjs  test-xcm-deposit.mjs  test-xcm-withdraw.mjs
scripts/functional-tests/: README.md  common.mjs  test-auto-settlement-expiration.mjs  test-auto-settlement-threshold-breach.mjs  test-auto-settlement-timing.mjs  test-insufficient-funds.mjs  test-invalid-coverage-period.mjs  test-lp-bid-orders.mjs  test-lp-order-cancellation.mjs  test-lp-partial-fill.mjs  test-lp-sell-before-settlement.mjs  test-market-specific-settlement.mjs  test-multiple-markets.mjs  test-multiple-policies-same-market.mjs  test-ocw-rainfall-fetch.mjs  test-policy-already-settled.mjs  test-quote-expiry.mjs  test-rolling-sum-calculation.mjs  test-settlement-rounding.mjs  test-threshold-trigger-log.mjs  test-zero-lp-holders.mjs
scripts/load-test/: README.md  event-listener.mjs  event-listener.out  load-test.mjs  package-lock.json  package.json  run-load-test.sh  test-accounts.mjs
scripts/tests/: README.md  common.mjs  package-lock.json  package.json  run-all-tests.mjs  test-cross-version.mjs  test-edge-cases.mjs  test-frontend-api.mjs  test-lp-trading.mjs  test-multi-party.mjs  test-oracle-advanced.mjs  test-v1-lifecycle.mjs  test-v2-lifecycle.mjs  test-v3-lifecycle.mjs
scripts/tests/e2e-comprehensive/: README.md  cross-version.mjs  economic-integrity.mjs  oracle-failure.mjs  run-comprehensive.mjs  v1-adversarial.mjs  v1-boundary.mjs  v2-adversarial.mjs  v2-boundary.mjs  v3-coexistence.mjs  v3-p2p-advanced.mjs
scripts/zombienet-tests/: README.md  test-dao-insolvency.mjs  test-dao-topup.mjs  test-defi-allocation.mjs  test-defi-unwind.mjs  test-event-with-dao-insolvency.mjs  test-external-lp-defi-loss.mjs  test-solvency-block.mjs
zombienet/: prmx-xcm-capital-test.toml
(+47 files in other folders)
