[workspace]
resolver = "2"

members = [
    "node",
    "runtime",
    "primitives",
    "pallets/prmx-markets",
    "pallets/prmx-holdings",
    "pallets/prmx-quote",
    "pallets/prmx-policy",
    "pallets/prmx-orderbook-lp",
    "pallets/prmx-oracle",
    "pallets/prmx-xcm-capital",
    "pallets/pallet-oracle-v3",
    "pallets/pallet-policy-v3",
    "pallets/pallet-market-v3",
]

[profile.release]
panic = "unwind"
lto = true

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
