[package]
name = "prmx-primitives"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared primitives for PRMX pallets"

[dependencies]
# Substrate dependencies
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506-2", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
]

