[package]
name = "pallet-prmx-markets"
version = "0.1.0"
description = "Market definitions for PRMX Chain"
authors = ["PRMX Team"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
log = { version = "0.4", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-2", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-2", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-2", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-2", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-2", default-features = false }

# PRMX primitives
prmx-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "prmx-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
# Test mode: bypasses duration/lead-time validation for rapid testing
test-mode = []
